# anamneseai

./: .gitignore  README-DOTENV-UPDATE.md  README-HuggingFace-Migration.md  README.md  ZUSAMMENFASSUNG-MIGRATION.md  anamneseai.py  anamneseai2.py  anamnesis_engine.py  app.py  config-examples.json  cookies.txt  env.example  final_smoking_test.txt  final_test.txt  migrate-to-uv.sh  new_cookies.txt  pyproject.toml  questionnAIre.py  questions.json  questions.txt  readme.md  requirements.txt  session_debug.txt  setup-uv.sh  smoking_session.txt  smoking_test.txt  start.sh  test_cookies.txt  test_final.txt  test_final_working.txt  test_guidance.txt  test_guidance2.txt  test_guidance3.txt  test_huggingface_integration.py
.cursor/rules/: create-prd.mdc
backend/: answer_evaluator.py  config.json  core.py  database.py  graph.py  guidance_generator.py  main.py  medical_history.db  models.py  poc_langgraph.py  question_manager.py  questions.json  requirements.txt  smoking_questions.json  state_manager.py  summary_generator.py
backend/prompts/: system_prompt.txt
frontend/: app.js  index.html  style.css  tailwind.config.js
old/: anamneseai.py  anamneseai2.py  chat.py  new_graph2.py  newgraph.py  questions.txt  ui_components.py
presentation/: presentation.md
tasks/: PRD_LangGraph_Refactoring.md  prd-configurable-model-selection.md  prd-frontend-backend-separation.md  prd-graph-migration-enhanced-medical-logic.md  prd-huggingface-inference-api-migration.md  tasks-PRD_LangGraph_Refactoring.md  tasks-huggingface-inference-api-migration.md  tasks-prd-configurable-model-selection.md  tasks-prd-frontend-backend-separation.md  tasks-prd-graph-migration-enhanced-medical-logic.md
